name:                ShapeDrawing
version:             0.3.2.0
author:              Steven X. Han
maintainer:          steven.han@anu.edu.au
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.20
homepage:            https://cs.anu.edu.au/courses/comp1100

Source-Repository head
    type:     git
    location: https://gitlab.cecs.anu.edu.au/comp1100/comp1100-assignment1.git

executable Warmup
    main-is:
        Warmup.hs

    build-depends:
        base >= 4.10.1 && < 4.11,
        codeworld-api == 0.2.2.1,
        text >= 1.2.2 && < 1.3

    hs-source-dirs:
        src

    default-language:
        Haskell2010

    ghc-options:
        -Wall -threaded

executable WarmupInteraction
    main-is:
        WarmupInteraction.hs

    build-depends:
        base >= 4.10.1 && < 4.11,
        codeworld-api == 0.2.2.1,
        text >= 1.2.2 && < 1.3

    hs-source-dirs:
        src

    default-language:
        Haskell2010

    ghc-options:
        -Wall -threaded

executable TypeToDraw
    main-is:
        TypeToDraw.hs

    other-modules:
        View,
        Shape,
        State,
        ColourName,
        Graphic
        
    build-depends:
        base >= 4.10.1 && < 4.11,
        codeworld-api == 0.2.2.1,
        text >= 1.2.2 && < 1.3,
        doctest >= 0.14,
        safe >= 0.3.16

    hs-source-dirs:
        src

    default-language:
        Haskell2010

    ghc-options:
        -Wall -threaded

executable ClickToDraw
    main-is:
        ClickToDraw.hs

    other-modules:
        ColourName,
        Events,
        View,
        Shape,
        State,
        Graphic
                       
    build-depends:       
        base >= 4.10.1 && < 4.11,
        codeworld-api == 0.2.2.1,
        text >= 1.2.2 && < 1.3,
        doctest >= 0.14

    hs-source-dirs:
        src

    default-language:
        Haskell2010

    ghc-options:
        -Wall -threaded


test-suite DocTests
    type:
        exitcode-stdio-1.0

    main-is:
        Test.hs

    other-modules:
        ColourName,
        Events,
        Graphic,
        View,
        Shape,
        State

    build-depends:
        base >= 4.10.1 && < 4.11,
        codeworld-api == 0.2.2.1,
        text >= 1.2.2 && < 1.3,
        doctest >= 0.14

    hs-source-dirs:
        src

    default-language:
        Haskell2010

    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
